--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   niji:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - name: run
@@ -14,6 +14,7 @@ jobs:
             tok_fb: ${{ secrets.TOK_FB }}
             tok_git: ${{ secrets.TOK_GIT }}
         run: |
+          sudo apt install imagemagick
           printf '<h1>%s</h1><br><p>Result: %s</p>' "Won, So it will post." "${rand}" >> "${GITHUB_STEP_SUMMARY}"
-
+          
           bash main.sh "${tok_git}" "${tok_fb}"
